// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Array [
        Object {
          "backgroundColor": "#007398",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "space-between",
        },
        undefined,
      ],
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View />
</View>
`;

exports[`renders correctly with offset 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Array [
        Object {
          "backgroundColor": "#007398",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "space-between",
        },
        undefined,
      ],
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View />
</View>
`;

exports[`renders correctly with style 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Array [
        Object {
          "backgroundColor": "#007398",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "space-between",
        },
        Object {
          "padding": 10,
        },
      ],
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View />
</View>
`;
